compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_to_pipe_on_first_step_of_pipeline.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  wibble(wobble, woo) |> wobble\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(wobble, woo) |> wobble
  ↑                            
}


----- AFTER ACTION

pub fn main() {
  wobble |> wibble(woo) |> wobble
}
