compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_to_pipe_when_first_arg_is_a_pipe_itself.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  wibble(wobble |> woo, waa)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(wobble |> woo, waa)
  ↑                         
}


----- AFTER ACTION

pub fn main() {
  wobble |> woo |> wibble(waa)
}
