compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__destructure_argument_single_item_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main(tuple: #(Int)) {\n  todo\n}\n"
---
----- BEFORE ACTION

pub fn main(tuple: #(Int)) {
                 ↑          
  todo
}


----- AFTER ACTION

pub fn main(tuple: #(Int)) {
  let #(value_0) = tuple
  todo
}
