compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__desugar_use_with_trailing_comma_and_label.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  use a, b <- wibble(\n    1,\n    wibble: 2,\n  )\n  todo\n}\n\nfn wibble(n, wibble m, wobble f) {\n    f(todo, todo)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  use a, b <- wibble(
           ▔▔▔↑      
    1,
    wibble: 2,
  )
  todo
}

fn wibble(n, wibble m, wobble f) {
    f(todo, todo)
}


----- AFTER ACTION

pub fn main() {
  wibble(
    1,
    wibble: 2,
  wobble: fn(a, b) {
    todo
  })
}

fn wibble(n, wibble m, wobble f) {
    f(todo, todo)
}
