compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__expand_function_capture.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  wibble(_, 1)\n}"
---
----- BEFORE ACTION
pub fn main() {
  wibble(_, 1)
         ↑    
}


----- AFTER ACTION
pub fn main() {
  fn(value) { wibble(value, 1) }
}
